# csim

./: .gitignore  README.md  conftest.py  playground.py  pyproject.toml
csim/: __init__.py  central_bodies.py  visualization.py
csim/math/: __init__.py  coes.py  integrators.py  quaternion.py  transformations.py
csim/physics/: gravity.py  rigid_body.py
csim/sensors/: __init__.py  core.py  models.py
csim/simulation/: simulator.py
examples/: multi_body_demo.py  multi_spacecraft_demo.py  orbit_demo.py
test/math/: test_coes.py  test_transformations.py
test/physics/: test_rigid_body.py
test/sensors/: test_core.py  test_models.py
test/simulation/: test_simulator.py
