[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csim"
version = "0.1.0"
description = "Simulator for orbits, rockets, and drones"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "plotly",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["csim"]
